# TouchAgent

./: CMakeLists.txt  README.md  build-android.sh
docs/: inject-touch.txt  multi-touch-protocol.txt
include/: input.h-labels.h
include/hv/: hconfig.h  hsocket.h
src/: CMakeLists.txt  touch.cc
tests/: CMakeLists.txt  getevent.c  touchDriverTest.cc
